--- a/hw1/hw1.qmd
+++ b/hw1/hw1.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Biostat 203B Homework 1"
 subtitle: Due Jan 27 @ 11:59PM
-author: Your Name and UID
+author: Cyrene Arputhasamy (705527395)
 format:
   html:
     theme: cosmo
