--- a/hw1/hw1.qmd
+++ b/hw1/hw1.qmd
@@ -44,6 +44,12 @@ sessionInfo()
 
 This exercise (and later in this course) uses the [MIMIC-IV data](https://mimic-iv.mit.edu), a freely accessible critical care database developed by the MIT Lab for Computational Physiology. Follow the instructions at <https://mimic.mit.edu/docs/gettingstarted/> to (1) complete the CITI `Data or Specimens Only Research` course and (2) obtain the PhysioNet credential for using the MIMIC-IV data. Display the verification links to your completion report and completion certificate here. (Hint: The CITI training takes a couple hours and the PhysioNet credentialing takes a couple days; do not leave it to the last minute.)
 
+CITI Completion Report: https://www.citiprogram.org/verify/?k8d770661-be97-40a3-b679-e00c20736162-53803788
+
+CITI Completion Certificate: https://www.citiprogram.org/verify/?wf39be852-045b-4a61-9745-3dd9fe63d6f8-53803788
+
+
+
 ## Q3. Linux Shell Commands
 
 1. The `~/mimic` folder within the Docker container contains data sets from MIMIC-IV. Refer to the documentation <https://mimic.mit.edu/docs/iv/> for details of data files.  
