--- a/hw1/hw1.qmd
+++ b/hw1/hw1.qmd
@@ -86,9 +86,12 @@ Display the number of lines in each data file using a similar loop.
 1. You and your friend just have finished reading *Pride and Prejudice* by Jane Austen. Among the four main characters in the book, Elizabeth, Jane, Lydia, and Darcy, your friend thinks that Darcy was the most mentioned. You, however, are certain it was Elizabeth. Obtain the full text of the novel from <http://www.gutenberg.org/cache/epub/42671/pg42671.txt> and save to your local folder. 
 ```{bash}
 #| eval: true
-wget -nc http://www.gutenberg.org/cache/epub/42671/pg42671.txt
+/opt/homebrew/bin/wget http://www.gutenberg.org/cache/epub/42671/pg42671.txt
 ```
-Explain what `wget -nc` does. Do **not** put this text file `pg42671.txt` in Git. Complete the following loop to tabulate the number of times each of the four characters is mentioned using Linux commands.
+Explain what `wget -nc` does. 
+Wget is a networking command-line tool to download files from the internet. The wget command was not found in my computer so I found out I needed homebrew for Mac and then installed wget from there. It wasn't working with "wget -nc" so I used "which wget" and found the link of the location which I used to replace "wget -nc" which fixed the problem. 
+
+Do **not** put this text file `pg42671.txt` in Git. Complete the following loop to tabulate the number of times each of the four characters is mentioned using Linux commands.
 ```{bash}
 #| eval: false
 wget -nc http://www.gutenberg.org/cache/epub/42671/pg42671.txt
