--- a/hw1/hw1.qmd
+++ b/hw1/hw1.qmd
@@ -94,11 +94,11 @@ Wget is a networking command-line tool to download files from the internet. The 
 Do **not** put this text file `pg42671.txt` in Git. Complete the following loop to tabulate the number of times each of the four characters is mentioned using Linux commands.
 ```{bash}
 #| eval: true
-/opt/homebrew/bin/wget http://www.gutenberg.org/cache/epub/42671/pg42671.txt
+pg42671.txt
 for char in Elizabeth Jane Lydia Darcy
 do
   echo $char:
-  # some bash commands here
+  grep -o -i $char pg42671.txt | wc -l
 done
 ```
 
