--- a/hw1/hw1.qmd
+++ b/hw1/hw1.qmd
@@ -133,3 +133,5 @@ The output is the last five lines of the first 20 lines of the text file. "$1" i
 ## Q5. More fun with Linux
 
 Try following commands in Bash and interpret the results: `cal`, `cal 2021`, `cal 9 1752` (anything unusual?), `date`, `hostname`, `arch`, `uname -a`, `uptime`, `who am i`, `who`, `w`, `id`, `last | head`, `echo {con,pre}{sent,fer}{s,ed}`, `time sleep 5`, `history | tail`.
+
+Cal opens a calendar of the current month.'cal 2021' opens the entire 2021 calendar. 'cal 9 1752' opens a calendar of September 1752. The unusual thing is that it's missing some dates (9/3-9/13). 'date' returns not only the current date but the exact time to the second, and the time zone. 'hostname' returned the name of the host user (.home). `arch` prints the computers architecture. The `uname` command writes to standard output the name of the operating system that you are using. `uptime` tells how long the Linux system has been running. `who am i` tells the username, date and time. `who` tells the users who are currently logged in. `w` returns a summary of every user logged into the computer, when they logged in, and if the user is idle. `id` is used to find out user and group names and numeric ID's associated with users. `last` shows information on the last logged-in users, `last | head` shows the 10 most recent of those. `echo {con,pre}{sent,fer}{s,ed}` distributes each syllable across the other syllable sets to create a list of 8 words (2^3 words). `time sleep 5` pauses execution for 5 seconds. `history | tail` shows the tail (last 10 commands) of the history of commands performed. 
