--- a/hw1/hw1.qmd
+++ b/hw1/hw1.qmd
@@ -60,7 +60,15 @@ demonstrate your skill sets on job market.
 
 ## Q2. Data ethics training
 
-This exercise (and later in this course) uses the [MIMIC-IV data](https://mimic-iv.mit.edu), a freely accessible critical care database developed by the MIT Lab for Computational Physiology. Follow the instructions at <https://mimic.mit.edu/docs/gettingstarted/> to (1) complete the CITI `Data or Specimens Only Research` course and (2) obtain the PhysioNet credential for using the MIMIC-IV data. Display the verification links to your completion report and completion certificate here. (Hint: The CITI training takes a couple hours and the PhysioNet credentialing takes a couple days; do not leave it to the last minute.)
+This exercise (and later in this course) uses the [MIMIC-IV data](https://mimic-iv.mit.edu),
+a freely accessible critical care database developed by the MIT Lab for 
+Computational Physiology. Follow the instructions at
+<https://mimic.mit.edu/docs/gettingstarted/> to (1) complete the CITI 
+`Data or Specimens Only Research` course and (2) obtain the PhysioNet credential
+for using the MIMIC-IV data. Display the verification links to your completion 
+report and completion certificate here. (Hint: The CITI training takes a couple 
+hours and the PhysioNet credentialing takes a couple days; do not leave it to 
+the last minute.)
 
 **CITI Completion Report:** https://www.citiprogram.org/verify/?k8d770661-be97-40a3-b679-e00c20736162-53803788
 
