changed code for counting characters since the text file includes the author's name outside of the book text

--- a/hw1/hw1.qmd
+++ b/hw1/hw1.qmd
@@ -229,7 +229,7 @@ Linux commands.
 for char in Elizabeth Jane Lydia Darcy
 do
   echo $char:
-  grep -o -i $char pg42671.txt | wc -l
+  tail -n +60 pg42671.txt | grep -o -i $char | wc -l
 done
 ```
 
