--- a/hw2/hw2.qmd
+++ b/hw2/hw2.qmd
@@ -130,8 +130,16 @@ system(
 ```
 
 1. Import `admissions.csv.gz` as a tibble `admissions_tble`.
+```{r}
+setwd("~/mimic/core")
+admissions_tble <- as_tibble(read_csv("admissions.csv.gz", show_col_types = FALSE))
+```
 
-2. Let's only keep the admissions that have a match in `icustays_tble` according to `subject_id` and `hadmi_id`.
+2. Let's only keep the admissions that have a match in `icustays_tble` according to `subject_id` and `hadm_id`.
+```{r}
+admissions_tble <- admissions_tble %>%
+  inner_join(icustays_tble, by = c("subject_id", "hadm_id"))
+```
 
 3. Summarize the following variables by graphics. 
 
@@ -142,7 +150,10 @@ system(
     - admission hour (anything unusual?)  
     - admission minute (anything unusual?)  
     - length of hospital stay (anything unusual?)    
-    
+```{r}
+
+```
+
 ## Q4. `patients` data
 
 Patient information is available in `patients.csv.gz`. See <https://mimic.mit.edu/docs/iv/modules/hosp/patients/> for details of each field in this file. The first 10 lines are
